Blog-Page (Logic and backend connection)
